--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,89 @@
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+/* Universal */
+@font-face {
+    font-family: "Hanken Grotesk";
+    src: url("./assets/fonts/HankenGrotesk-VariableFont_wght.ttf");
+}
+
+html {
+    box-sizing: border-box;
+}
+
+body {
+    font-family:  "Hanken Grotesk";
+}
+
+p {
+    font-size: 18px;
+}
+
+/* Result card */
+.result-card {
+    background-color: hsl(252, 100%, 67%);
+    color: white;
+    text-align: center;
+    border-radius: 0 0 30px 30px;
+}
+
+@media screen and (min-width: 850px ) {
+    .result-card {
+        border-radius: 30px;
+    }
+
+    .content {
+        display: flex;
+        width: 40%;
+        height: auto;
+        margin: auto;
+    }
+}
+
+.result-card h1 {
+    margin-top: 0;
+    padding-top: 2rem;
+}
+
+.circle {
+    border-radius: 50%;
+    background-color: hsla(256, 72%, 46%, 1);
+    width: clamp(8rem, 25vw, 15rem);
+    height: clamp(8rem, 25vw, 15rem);
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.circle h2 {
+    font-weight: 800;
+    font-size: clamp(42px, 6vw, 72px);
+    margin: 0;
+}
+
+.circle span {
+    color: hsl(241, 100%, 89%)
+}
+
+.result-card h3 {
+    font-size: 2rem;
+}
+
+.result-card p {
+    padding:0 4rem 2rem 4rem;
+}
+
+
+
+/* Summary Card */
+
+button {
+    background-color: hsl(224, 30%, 27%);
+    color: white;
+}
+/* Footer */
+.attribution { 
+    font-size: 11px; text-align: center; 
+}
+
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
