--- a/styles.css
+++ b/styles.css
@@ -44,16 +44,26 @@ p {
     border-radius: 0 0 30px 30px;
 }
 
-@media screen and (min-width: 850px ) {
-    .result-card {
-        border-radius: 30px;
-    }
-
+@media screen and (min-width: 1050px ) {
     .content {
         display: flex;
-        width: 40%;
-        height: auto;
-        margin: auto;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10%;
+        box-shadow: 15px 15px 15px lightgrey;
+        border-radius: 25px;
+    }
+
+    .result-card {
+        border-radius: 30px;
+        width: 50%;
+    }
+
+    .summary-card {
+        width: 50%;
+        margin: 0 !important;
+        padding: 0 1.5em;
     }
 }
 
