--- a/styles.css
+++ b/styles.css
@@ -114,11 +114,15 @@ p {
 }
 
 .category-row-card {
-    background-color: beige;
     border-radius: 25px;
     display: flex;
     margin: 1.5em 0;
     padding:0 1em;
+    position: relative;
+}
+
+.category-row-card h3, p, span {
+    z-index: 999;
 }
 
 .category-row-card img {
@@ -135,11 +139,35 @@ p {
     font-weight: 700;
 }
 
+.category-row-card::after {
+    content: "";
+    border-radius: 25px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 1s ease;
+}
+
+.category-row-card:hover::after {
+    opacity: 1;
+}
+
 #reaction-card {
     background-color: hsla(0, 100%, 67%, .05);
 }
+
 #reaction-card h3 {
     color: var(--Lightred);
+}
+
+#reaction-card:hover h3{
+    color: white;
+}
+#reaction-card::after {
+    background: linear-gradient(to right, var(--Lightred) 80%, hsla(0, 100%, 67%, .05) 20%);
 }
 
 #memory-card {
@@ -150,6 +178,14 @@ p {
     color: var(--Orangeyyellow);
 }
 
+#memory-card:hover h3{
+    color: white;
+}
+
+#memory-card::after {
+    background: linear-gradient(to right, var(--Orangeyyellow) 92%, hsla(0, 100%, 67%, .05) 8%);
+}
+
 #verbal-card {
     background-color: hsla(166, 100%, 37%, .05);
 }
@@ -158,11 +194,27 @@ p {
     color: var(--Greenteal);
 }
 
+#verbal-card:hover h3{
+    color: white;
+}
+
+#verbal-card::after {
+    background: linear-gradient(to right, var(--Greenteal) 61%, hsla(0, 100%, 67%, .05) 39%);
+}
+
 #visual-card {
     background-color: hsla(234, 85%, 45%, .05);
 }
 #visual-card h3 {
     color: var(--Cobaltblue);
+}
+
+#visual-card:hover h3{
+    color: white;
+}
+
+#visual-card::after {
+    background: linear-gradient(to right, var(--Cobaltblue) 72%, hsla(0, 100%, 67%, .05) 28%);
 }
 
 button {
